--- a/java script/时钟样式.html
+++ b/java script/时钟样式.html
@@ -242,7 +242,7 @@
 
 
 
-
+        //获取当前时间
          function date() {
             let time = new Date()
             let nian = time.getFullYear()
