--- a/java script/鼠标拖拽效果.html
+++ b/java script/鼠标拖拽效果.html
@@ -26,8 +26,8 @@
         var dv = document.getElementById('dv');
         var x = 0;
         var y = 0;
-        var l = 0;
-        var t = 0;
+        var l = 0;  //初始值
+        var t = 0;  //初始值
         var isDown = false; //开关
 
 
