--- a/java script/鼠标拖拽效果.html
+++ b/java script/鼠标拖拽效果.html
@@ -9,7 +9,7 @@
             position: absolute;
             width: 400px;
             height: 400px;
-            background: yellow;
+            background: #e3ffa5;
         }
     </style>
 </head>
