--- a/java script/鼠标拖拽效果.html
+++ b/java script/鼠标拖拽效果.html
@@ -21,7 +21,7 @@
     </div>
 
 
-    <script>
+    <script>11
         //获取元素
         var dv = document.getElementById('dv');
         var x = 0;
@@ -29,7 +29,6 @@
         var l = 0;  //初始值
         var t = 0;  //初始值
         var isDown = false; //开关
-
 
 
 
