--- a/java script/VUE1.html
+++ b/java script/VUE1.html
@@ -145,6 +145,22 @@
         // update     在数据改变之后触发
         // beforeDestroy   在数据删除前触发
         // destroyed 在数据删除后触发
+
+
+
+        //vue如何绑定class，其他属性，样式绑定？
+        //v-bind:属性名称='a'  自定义属性等于js变量a
+        //简写  :属性名称='a'
+        //原生class如何绑定？   :class={ red:true}   也可以引用data里面的对象  :class= 对象  也可以:class=[对象1，对象2} 样式也是如此
+        //绑定属性时对象的键值为true 为false则不加载
+
+
+
+
+
+
+
+
     </script>
 </body>
 
