--- a/个人博客建设/mulu/压力测试/ylce.html
+++ b/个人博客建设/mulu/压力测试/ylce.html
@@ -35,8 +35,21 @@
         .demo {
             margin: 0 auto;
             width: 100%;
-            background: url("https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1575613924929&di=f1c7650ddbc648d7db0a49a584db2a83&imgtype=0&src=http%3A%2F%2Fc.hiphotos.baidu.com%2Fzhidao%2Fpic%2Fitem%2Ff636afc379310a5591ad3c7eb64543a9832610aa.jpg") center/cover;
-            background-attachment:fixed
+        }
+
+        .demo:before {
+            content: ' ';
+            position: fixed;
+            z-index: -1;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            /*background:#a4daff ;*/
+            background-image: url("./images/3.jpg");
+            background-size: cover;
+            background-position:center ;
+
         }
         /*标题导航栏区域*/
         
