--- a/个人博客建设/mulu/文章/wenzhang.html
+++ b/个人博客建设/mulu/文章/wenzhang.html
@@ -34,9 +34,22 @@
         .demo {
             margin: 0 auto;
             width: 100%;
-            height: 100%;
-            background: url("https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1575613924929&di=f1c7650ddbc648d7db0a49a584db2a83&imgtype=0&src=http%3A%2F%2Fc.hiphotos.baidu.com%2Fzhidao%2Fpic%2Fitem%2Ff636afc379310a5591ad3c7eb64543a9832610aa.jpg") center/cover;
-            background-attachment: fixed;
+
+        }
+        
+        .demo:before {
+            content: ' ';
+            position: fixed;
+            z-index: -1;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            /*background:#a4daff ;*/
+            background-image: url("./images/3.jpg");
+            background-size: cover;
+            background-position:center ;
+
         }
         /*标题导航栏区域*/
         
@@ -135,7 +148,7 @@
             width: 1280px;
             margin-left: auto;
             margin-right: auto;
-            background: rgb(0, 0, 0, 0);
+            background: rgba(255, 255, 255, 0.2);
             overflow: auto;
             overflow-x: hidden;
             overflow-y: hidden;
@@ -561,7 +574,7 @@
 
 
                 <!--文章展示区-->
-                <div class="zhanshi" >
+                <div class="zhanshi">
                     <ul class="list">
                         <li v-for="(data_tsxt,index) in data_tsxt">
                             <div class="content-1">
@@ -615,7 +628,7 @@
 
 
                         </div>
-                        <ul class="daohang-list" >
+                        <ul class="daohang-list">
                             <li>
                                 <a href="../文章/wenzhang.html">全部文章</a>
                             </li>
@@ -704,86 +717,65 @@
     </div>
 
     <script>
-        var input = document.querySelector('.doahang-tlter label input')
-        var list = document.querySelector('.doahang-tlter ul')
-        var but = document.querySelector('.doahang-tlter label span')
+        "use strict";
 
-        // "use strict";
+        var input = document.querySelector('.doahang-tlter label input');
+        var list = document.querySelector('.doahang-tlter ul');
+        var but = document.querySelector('.doahang-tlter label span');
 
         var vml = new Vue({
-            el: '#content-test', //获取dom节点
+            el: '#content-test',
+            //获取dom节点
             create: { //ajax请求数据区域
             },
             methods: {
                 //点击事件放置
-                guolu(){
-                    if (this.chauxun==''){
-                        alert('请输入对应的内容')
+                guolu: function guolu() {
+                    var _this = this;
+
+                    if (this.chauxun == '') {
+                        alert('请输入对应的内容');
                     }
-                    this.data_tsxt = this.data_tsxt.filter((item)=>{
-                        return item.title.includes(this.chauxun)
-                    })
-                    console.log(this.data_tsxt)
-                    this.chauxun=''
 
-
-
-                },
-
-
+                    this.data_tsxt = this.data_tsxt.filter(function(item) {
+                        return item.title.includes(_this.chauxun);
+                    });
+                    console.log(this.data_tsxt);
+                    this.chauxun = '';
+                }
             },
             data: {
                 //数据放置
-                chauxun:'',
+                chauxun: '',
                 data_tsxt: [{
                     title: 'web端用户体验性测试方法',
                     msg_url: 'http://img.zcool.cn/community/01d49b5a25087da80120ba387f341f.png@1280w_1l_2o_100sh.png',
-                    content_wen: '1.易用性标准简介 1.1易用性定义 GB/T 16260-2006定义: 在指定条件下使用时,软件产品被理解、学习、' +
-                        '使用和吸引用户的能力。 简单说就是:易懂、易学、易用、吸引人。易用性对消费类的产品显得尤为重要... 2.易用性常见原则 ' +
-                        '2.1尼尔森可用性原则 1.状态可见原则用户在网页上的任何操作,不论是单击、滚动还是按下键盘,页面应即时给出反馈。 “即时”是指,' +
-                        '页面响应时间小于用户能忍受的等待时间。 2.环境贴切原则 网页...',
+                    content_wen: '1.易用性标准简介 1.1易用性定义 GB/T 16260-2006定义: 在指定条件下使用时,软件产品被理解、学习、' + '使用和吸引用户的能力。 简单说就是:易懂、易学、易用、吸引人。易用性对消费类的产品显得尤为重要... 2.易用性常见原则 ' + '2.1尼尔森可用性原则 1.状态可见原则用户在网页上的任何操作,不论是单击、滚动还是按下键盘,页面应即时给出反馈。 “即时”是指,' + '页面响应时间小于用户能忍受的等待时间。 2.环境贴切原则 网页...',
                     year: '2019',
                     month: '12',
                     day: '09',
                     zhuan: '../易用性测试/yiyongx.html'
-
-
-
                 }, {
                     title: 'web压力测试教程',
                     msg_url: './images/1.jpg',
-                    content_wen: ' 软件压力测试是一种基本的质量保证行为，它是每个重要软件测试工作的一部分。软件压力测试的基本思路很简单：\n' +
-                        '                        不是在常规条件下运行手动或自动测试，而是在计算机数量较少或系统资源匮乏的条件下运行测试。\n' +
-                        '                        通常要进行软件压力测试的资源包括内部内存、CPU 可用性、磁盘空间和网络带宽。',
+                    content_wen: ' 软件压力测试是一种基本的质量保证行为，它是每个重要软件测试工作的一部分。软件压力测试的基本思路很简单：\n' + '                        不是在常规条件下运行手动或自动测试，而是在计算机数量较少或系统资源匮乏的条件下运行测试。\n' + '                        通常要进行软件压力测试的资源包括内部内存、CPU 可用性、磁盘空间和网络带宽。',
                     year: '2019',
                     month: '12',
                     day: '13',
                     zhuan: '../压力测试/ylce.html'
-
-
-
                 }, {
                     title: 'HTTP协议内容详解',
                     msg_url: './images/2.png',
-                    content_wen: ' http是一个简单的请求-响应协议，它通常运行在TCP之上。它指定了客户端可能发送给服务器什\n' +
-                        '                        么样的消息以及得到什么样的响应。请求和响应消息的头以ASCII码形式给出；而消息内容则具有\n' +
-                        '                        一个类似MIME的格式。这个简单模型是早期Web成功的有功之臣，因为它使得开发和部署是那么的直截了当',
+                    content_wen: ' http是一个简单的请求-响应协议，它通常运行在TCP之上。它指定了客户端可能发送给服务器什\n' + '                        么样的消息以及得到什么样的响应。请求和响应消息的头以ASCII码形式给出；而消息内容则具有\n' + '                        一个类似MIME的格式。这个简单模型是早期Web成功的有功之臣，因为它使得开发和部署是那么的直截了当',
                     year: '2019',
                     month: '12',
                     day: '19',
                     zhuan: '../http协议内容/http.html'
-
-                },
-
-                ]
-
+                }]
             },
-            filters: {
-                //对数据进行操作
-
+            filters: { //对数据进行操作
             },
             computed: { //放置计算属性
-
             },
             watch: { //数据监听
             }
