--- a/个人博客建设/mulu/文章/wenzhang.html
+++ b/个人博客建设/mulu/文章/wenzhang.html
@@ -771,7 +771,15 @@
                     month: '12',
                     day: '19',
                     zhuan: '../http协议内容/http.html'
-                }]
+                }, {
+                    title: '购物车小案例',
+                    msg_url: './images/3.png',
+                    content_wen:'主要设计思路在商品列表页，我们将点击添加的商品放入一个对象中，而后将该对象放入数组中，一个对象可以说就是一个商品。在购物车页面将数据从对象中读取出来，然后再渲染到页面中。即可完成购物车的操作。',
+                    year: '2020',
+                    month: '01',
+                    day: '01',
+                    zhuan: '../购物车案例/gowuche.html'}
+                ]
             },
             filters: { //对数据进行操作
             },
