--- a/定位作业1/定位作业2.html
+++ b/定位作业1/定位作业2.html
@@ -110,5 +110,11 @@
             </li>
         </ul>
     </div>
+
+    <script>
+
+        var aa=document.getElementById()
+    </script>
+
 </body>
 </html>
