--- a/个人博客建设/mulu/备忘录/index.html
+++ b/个人博客建设/mulu/备忘录/index.html
@@ -87,7 +87,7 @@
 
         .onspen {
             text-decoration: line-through;
-            color: aliceblue;
+            color: green;
 
         }
     </style>
