--- a/个人博客建设/mulu/文章/wenzhang.html
+++ b/个人博客建设/mulu/文章/wenzhang.html
@@ -528,6 +528,10 @@
         .top:hover {
             cursor: pointer
         }
+
+         a:hover{
+             cursor: pointer
+         }
     </style>
 </head>
 
@@ -589,7 +593,7 @@
                             <div class="content-1">
                                 <h5 class="list-title">
                                     <span>【原创】</span>
-                                    <a>{{data_tsxt.title}}</a>
+                                    <a :href="data_tsxt.zhuan">{{data_tsxt.title}}</a>
                                 </h5>
                                 <div class="tome">
                                     <span>{{data_tsxt.day}}</span>
@@ -756,6 +760,8 @@
                     console.log(this.data_tsxt);
                     this.chauxun = '';
                 },
+
+
 
                 quanbu:function quanbu() {
                     return this.data_tsxt=this.mydataa
